--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -40,3 +40,52 @@ body{
     text-align: center;
   }
 }
+
+.header{
+  height: 60px;
+  display: flex;
+  background: #fff;
+  line-height: 60px;
+  border-bottom: #e8eaec solid 1px;
+  .logoBox{
+    height: 100%;
+    width: 240px;
+  }
+  .headNavBox{
+    flex: 1;
+    height: 100%;
+    .item{
+      padding: 0 30px;
+      font-size: 16px;
+    }
+  }
+  .userBox{
+    max-width: 200px;
+    padding-right: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    .headImg{
+      width: 40px;
+      height: 40px;
+      overflow: hidden;
+      border-radius: 50%;
+      margin-right: 5px;
+    }
+  }
+}
+
+.content{
+  height: calc(100vh - 61px);
+  display: flex;
+  .ivu-menu{
+    width: 240px;
+    height: 100%;
+  }
+  .page{
+    flex: 1;
+    height: 100%;
+    position: relative;
+  }
+}
