--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -57,6 +57,10 @@ body{
     .item{
       padding: 0 30px;
       font-size: 16px;
+      color: #515a6e;
+      &.router-link-active{
+        color: #2d8cf0;
+      }
     }
   }
   .userBox{
@@ -87,5 +91,13 @@ body{
     flex: 1;
     height: 100%;
     position: relative;
+    box-sizing: border-box;
+    padding: 20px;
+  }
+}
+
+.mPageTabs{
+  .ivu-tabs-nav-container{
+    background:#fff;
   }
 }
