--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -96,6 +96,7 @@ body{
     position: relative;
     box-sizing: border-box;
     padding:10px 20px;
+    overflow-y: scroll;
   }
 }
 
@@ -123,6 +124,10 @@ body{
   }
   .ivu-form-item{
     margin-bottom: 15px;
+  }
+  .menuTable{
+    height: calc(100% - 110px);
+    overflow-y: scroll;
   }
 }
 
